--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,5 +29,5 @@ Imports:
 Roxygen: list(markdown = TRUE)
 Suggests: 
     dplyr
-URL: https://github.com/MomX/Momocs2
+URL: https://github.com/MomX/Momocs2, https://momx.github.io/Momocs2/
 BugReports: https://github.com/MomX/Momocs2/issues
