--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,150 @@
 url: https://momx.github.io/Momocs2/
 template:
   bootstrap: 5
+  bootswatch: flatly
+  bslib:
+    primary: "#2C5F8D"
+    base_font: {google: "Roboto"}
+    heading_font: {google: "Roboto Slab"}
 
+home:
+  title: "Momocs2 • Modern Morphometrics for R"
+  description: >
+    A modern, tidy approach to morphometric analysis with emphasis on
+    outlines, landmarks, and shape analysis.
+  links:
+  - text: Legacy Momocs
+    href: https://momx.github.io/Momocs/
+
+navbar:
+  structure:
+    left:  [intro, reference, articles, tutorials, news]
+    right: [search, github]
+  components:
+    articles:
+      text: Articles
+      menu:
+      - text: Getting Started
+        href: articles/getting-started.html
+      - text: -------
+      - text: Workflow Examples
+      - text: Basic Outline Analysis
+        href: articles/outline-workflow.html
+      - text: Landmark Analysis
+        href: articles/landmark-workflow.html
+
+reference:
+- title: "Core Data Structures"
+  desc: >
+    S3 classes and constructor functions for morphometric data types.
+  contents:
+  - starts_with("as_")
+
+- title: "Coordinate Transformations"
+  desc: >
+    Functions to transform shape coordinates. These modify the coo column in tibbles.
+  contents:
+  - starts_with("coo_")
+  - -coo_bookstein
+  - -coo_baseline
+
+- title: "Landmark Registration"
+  desc: >
+    Specialized functions for landmark-based alignment.
+  contents:
+  - coo_bookstein
+  - coo_baseline
+
+- title: "Information Extraction"
+  desc: >
+    Extract information from shapes without modifying them. Use within mutate() to add columns.
+  contents:
+  - starts_with("get_")
+  - centroid
+  - centsize
+  - centsize_norm
+
+- title: "Shape Measurements"
+  desc: >
+    Measure scalar properties of shapes. Automatically adds columns to tibbles.
+  contents:
+  - starts_with("measure_")
+
+- title: "Visualization"
+  desc: >
+    Functions for plotting and visualizing morphometric data.
+  contents:
+  - pile
+  - mosaic
+  - p
+  - starts_with("draw_")
+
+- title: "Utilities"
+  desc: >
+    Helper functions and utilities.
+  contents:
+  - get_coo_cols
+  - rinse
+  - "%>%"
+
+- title: "Function Factories"
+  desc: >
+    Higher-order functions for creating dispatchers (advanced users).
+  contents:
+  - make_coo_function
+  - make_get_function
+  - make_measure_function
+
+- title: "S3 Methods"
+  desc: >
+    Print and display methods for custom classes.
+  contents:
+  - starts_with("print.")
+  - starts_with("type_sum.")
+  - starts_with("pillar_shaft.")
+
+articles:
+- title: Getting Started
+  navbar: ~
+  contents:
+  - getting-started
+
+- title: Workflows
+  desc: Complete analysis examples
+  contents:
+  - outline-workflow
+  - landmark-workflow
+  - measurements-workflow
+
+- title: Advanced Topics
+  contents:
+  - landmark-aware-sampling
+  - custom-visualizations
+  - extending-momocs2
+
+news:
+  releases:
+  - text: "Version 0.1.0"
+    href: https://github.com/MomX/Momocs2/releases/tag/v0.1.0
+
+footer:
+  structure:
+    left: developed_by
+    right: built_with
+  components:
+    developed_by: |
+      Momocs2 is developed by [Vincent Bonhomme](https://vincentbonhomme.github.io/)
+      and contributors. Part of the [MomX](https://momx.github.io/) ecosystem.
+    built_with: |
+      Built with [pkgdown](https://pkgdown.r-lib.org/) and ❤️
+
+figures:
+  dev: ragg::agg_png
+  dpi: 300
+  dev.args: []
+  fig.ext: png
+  fig.width: 7
+  fig.height: 5
+  fig.retina: 2
+  fig.asp: ~
+  bg: NA
