finalizing coo/get

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,22 +33,35 @@ export(centsize)
 export(centsize_norm)
 export(coo_affine)
 export(coo_align)
+export(coo_align_calliper)
 export(coo_align_minor)
+export(coo_align_minradius)
 export(coo_baseline)
 export(coo_bookstein)
 export(coo_center)
 export(coo_center_to)
+export(coo_close)
+export(coo_close_spread)
+export(coo_direction_negative)
+export(coo_direction_positive)
+export(coo_down)
 export(coo_extract)
 export(coo_flip_x)
 export(coo_flip_xaxis)
 export(coo_flip_y)
 export(coo_flip_yaxis)
 export(coo_head)
+export(coo_left)
+export(coo_open)
+export(coo_rescale)
 export(coo_reverse)
+export(coo_right)
 export(coo_rotate)
 export(coo_rotate_around)
 export(coo_sample)
 export(coo_sample_prop)
+export(coo_sample_regular_radius)
+export(coo_scale)
 export(coo_shear_x)
 export(coo_shear_y)
 export(coo_slide)
@@ -65,42 +78,66 @@ export(coo_translate)
 export(coo_translate_jitter)
 export(coo_translate_to_xaxis)
 export(coo_translate_to_yaxis)
+export(coo_trim_both)
+export(coo_trim_head)
+export(coo_trim_tail)
+export(coo_untilt_x)
+export(coo_untilt_y)
+export(coo_up)
 export(draw_centroid)
 export(draw_first_point)
 export(draw_landmarks)
 export(draw_landmarks_as_numbers)
 export(draw_links)
 export(draw_outlines)
+export(get_angle_edges)
+export(get_angle_tangent)
 export(get_angles)
 export(get_area)
+export(get_bbox)
 export(get_calliper)
 export(get_calliper_ids)
 export(get_centroid)
+export(get_centroid_distance)
 export(get_centroid_size)
 export(get_centroid_size_norm)
 export(get_chull)
 export(get_chull_id)
+export(get_chull_onion)
 export(get_circularity)
 export(get_circularity_haralick)
 export(get_circularity_norm)
 export(get_closest)
 export(get_closest_angle)
+export(get_closest_direction)
+export(get_compactness)
 export(get_convexity)
 export(get_coo_cols)
+export(get_coords_nb)
+export(get_cut)
+export(get_direction_sign)
 export(get_ed)
 export(get_ed_along)
 export(get_ed_intermediate)
 export(get_elongation)
+export(get_join)
 export(get_ldk)
 export(get_length)
 export(get_lw)
 export(get_perim)
 export(get_perim_along)
 export(get_perim_cum)
+export(get_range)
+export(get_range_diff)
 export(get_rectangularity)
 export(get_rectilinearity)
+export(get_rugosity)
 export(get_solidity)
+export(get_transform)
+export(get_transformed)
+export(get_truss)
 export(get_width)
+export(make_coo_function)
 export(measure)
 export(mosaic)
 export(p)
@@ -138,6 +175,7 @@ importFrom(magrittr,"%>%")
 importFrom(pillar,new_pillar_shaft_simple)
 importFrom(pillar,pillar_shaft)
 importFrom(stats,approx)
+importFrom(stats,dist)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,var)
