--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,10 @@ S3method(pillar_shaft,proc)
 S3method(print,momocs2_function)
 S3method(print,momocs2_get_function)
 S3method(print,momocs_measures)
+S3method(print,xy)
+export("%$%")
 export("%>%")
+export("%T>%")
 export(as_coe)
 export(as_coo)
 export(as_cur)
@@ -27,8 +30,8 @@ export(as_opoly)
 export(as_out)
 export(as_path)
 export(as_proc)
+export(as_xy)
 export(available_measures)
-export(centroid)
 export(centsize)
 export(centsize_norm)
 export(coo_affine)
@@ -40,6 +43,7 @@ export(coo_baseline)
 export(coo_bookstein)
 export(coo_center)
 export(coo_center_to)
+export(coo_check)
 export(coo_close)
 export(coo_close_spread)
 export(coo_direction_negative)
@@ -64,11 +68,12 @@ export(coo_sample_regular_radius)
 export(coo_scale)
 export(coo_shear_x)
 export(coo_shear_y)
-export(coo_slide)
 export(coo_slide_angle)
 export(coo_slide_closest)
 export(coo_slide_direction)
 export(coo_slide_gap)
+export(coo_slide_id)
+export(coo_slide_ldk)
 export(coo_smooth)
 export(coo_smooth_fixed)
 export(coo_tail)
@@ -138,6 +143,7 @@ export(get_transformed)
 export(get_truss)
 export(get_width)
 export(make_coo_function)
+export(make_get_function)
 export(measure)
 export(mosaic)
 export(p)
@@ -171,7 +177,9 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,segments)
 importFrom(graphics,text)
+importFrom(magrittr,"%$%")
 importFrom(magrittr,"%>%")
+importFrom(magrittr,"%T>%")
 importFrom(pillar,new_pillar_shaft_simple)
 importFrom(pillar,pillar_shaft)
 importFrom(stats,approx)
@@ -179,3 +187,5 @@ importFrom(stats,dist)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(utils,head)
+importFrom(utils,tail)
