betters getters. + coe

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ export(draw_landmarks)
 export(draw_landmarks_as_numbers)
 export(draw_links)
 export(draw_outlines)
+export(fold)
 export(get_angle_edges)
 export(get_angle_tangent)
 export(get_angles)
@@ -115,6 +116,7 @@ export(get_circularity_norm)
 export(get_closest)
 export(get_closest_angle)
 export(get_closest_direction)
+export(get_coe_cols)
 export(get_compactness)
 export(get_convexity)
 export(get_coo_cols)
@@ -159,6 +161,7 @@ export(type_sum.opoly)
 export(type_sum.out)
 export(type_sum.path)
 export(type_sum.proc)
+export(unfold)
 importFrom(cli,col_blue)
 importFrom(cli,col_cyan)
 importFrom(cli,col_green)
@@ -181,10 +184,13 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,"%T>%")
 importFrom(pillar,new_pillar_shaft_simple)
 importFrom(pillar,pillar_shaft)
+importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(stats,approx)
 importFrom(stats,dist)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(tibble,tibble)
 importFrom(utils,head)
 importFrom(utils,tail)
