+efourier + dezbleul in classes + front/declass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,11 +25,13 @@ export(as_dct)
 export(as_eft)
 export(as_ldk)
 export(as_ldk_id)
+export(as_meas)
 export(as_npoly)
 export(as_opoly)
 export(as_out)
 export(as_path)
 export(as_proc)
+export(as_rft)
 export(as_xy)
 export(available_measures)
 export(centsize)
@@ -89,13 +91,20 @@ export(coo_trim_tail)
 export(coo_untilt_x)
 export(coo_untilt_y)
 export(coo_up)
+export(declass)
 export(draw_centroid)
 export(draw_first_point)
 export(draw_landmarks)
 export(draw_landmarks_as_numbers)
 export(draw_links)
 export(draw_outlines)
+export(efourier)
+export(efourier_i)
+export(efourier_name)
+export(efourier_norm)
+export(efourier_split)
 export(fold)
+export(front)
 export(get_angle_edges)
 export(get_angle_tangent)
 export(get_angles)
