better fold/unfold for Momstats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ S3method(print,momocs2_function)
 S3method(print,momocs2_get_function)
 S3method(print,momocs_measures)
 S3method(print,xy)
+S3method(unfold,data.frame)
+S3method(unfold,list)
 export("%$%")
 export("%>%")
 export("%T>%")
