tidying + wrap/unwrap

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -173,6 +173,8 @@ export(type_sum.out)
 export(type_sum.path)
 export(type_sum.proc)
 export(unfold)
+export(unwrap)
+export(wrap)
 importFrom(cli,col_blue)
 importFrom(cli,col_cyan)
 importFrom(cli,col_green)
