--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(efourier_norm)
 export(efourier_split)
 export(fold)
 export(front)
+export(get_all_coe_cols)
 export(get_angle_edges)
 export(get_angle_tangent)
 export(get_angles)
