last batch. eft replaces efourier, + olea. + various

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,11 +100,11 @@ export(draw_landmarks)
 export(draw_landmarks_as_numbers)
 export(draw_links)
 export(draw_outlines)
-export(efourier)
-export(efourier_i)
-export(efourier_name)
-export(efourier_norm)
-export(efourier_split)
+export(eft)
+export(eft_i)
+export(eft_name)
+export(eft_norm)
+export(eft_split)
 export(fold)
 export(front)
 export(get_all_coe_cols)
