--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -72,7 +72,7 @@ reference:
 - title: "Morphometric methods"
 - subtitle: "Outlines"
   contents:
-  - starts_with("efourier")
+  - starts_with("eft")
 
 - title: "Classes and printers"
   desc: "Mostly cosmetics"
