--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,10 @@ export(coo_trim_tail)
 export(coo_untilt_x)
 export(coo_untilt_y)
 export(coo_up)
+export(dct)
+export(dct_i)
+export(dct_name)
+export(dct_split)
 export(declass)
 export(draw_centroid)
 export(draw_first_point)
@@ -108,6 +112,7 @@ export(eft_split)
 export(fold)
 export(front)
 export(get_all_coe_cols)
+export(get_all_coo_cols)
 export(get_angle_edges)
 export(get_angle_tangent)
 export(get_angles)
@@ -160,6 +165,12 @@ export(make_coo_function)
 export(make_get_function)
 export(measure)
 export(mosaic)
+export(npoly)
+export(npoly_i)
+export(npoly_name)
+export(opoly)
+export(opoly_i)
+export(opoly_name)
 export(p)
 export(pile)
 export(type_sum.coo)
@@ -202,6 +213,9 @@ importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(stats,approx)
 importFrom(stats,dist)
+importFrom(stats,lm)
+importFrom(stats,poly)
+importFrom(stats,predict)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,var)
