--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,9 @@ S3method(pillar_shaft,opoly)
 S3method(pillar_shaft,out)
 S3method(pillar_shaft,path)
 S3method(pillar_shaft,proc)
+S3method(plot,calibrate_harmonicpower)
+S3method(plot,calibrate_r2)
+S3method(plot,calibrate_reconstruction)
 S3method(print,momocs2_function)
 S3method(print,momocs2_get_function)
 S3method(print,momocs_measures)
@@ -67,6 +70,8 @@ export(coo_right)
 export(coo_rotate)
 export(coo_rotate_around)
 export(coo_sample)
+export(coo_sample_cur)
+export(coo_sample_cur_prop)
 export(coo_sample_prop)
 export(coo_sample_regular_radius)
 export(coo_scale)
@@ -94,6 +99,8 @@ export(coo_untilt_x)
 export(coo_untilt_y)
 export(coo_up)
 export(dct)
+export(dct_calibrate_harmonicpower)
+export(dct_calibrate_reconstruction)
 export(dct_i)
 export(dct_name)
 export(dct_split)
@@ -105,6 +112,8 @@ export(draw_landmarks_as_numbers)
 export(draw_links)
 export(draw_outlines)
 export(eft)
+export(eft_calibrate_harmonicpower)
+export(eft_calibrate_reconstruction)
 export(eft_i)
 export(eft_name)
 export(eft_norm)
@@ -166,9 +175,13 @@ export(make_get_function)
 export(measure)
 export(mosaic)
 export(npoly)
+export(npoly_calibrate_r2)
+export(npoly_calibrate_reconstruction)
 export(npoly_i)
 export(npoly_name)
 export(opoly)
+export(opoly_calibrate_r2)
+export(opoly_calibrate_reconstruction)
 export(opoly_i)
 export(opoly_name)
 export(p)
@@ -198,7 +211,10 @@ importFrom(grDevices,dev.cur)
 importFrom(grDevices,dev.new)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
+importFrom(graphics,boxplot)
+importFrom(graphics,grid)
 importFrom(graphics,lines)
+importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
@@ -214,6 +230,7 @@ importFrom(rlang,.data)
 importFrom(stats,approx)
 importFrom(stats,dist)
 importFrom(stats,lm)
+importFrom(stats,median)
 importFrom(stats,poly)
 importFrom(stats,predict)
 importFrom(stats,runif)
